[package]
name = "kilnd"
version.workspace = true
edition.workspace = true
license = { workspace = true }
description = "Kiln WebAssembly Runtime Daemon - minimal optimized binary for different environments"
repository = "https://github.com/pulseengine/kiln"
readme = "README.md"
keywords = ["wasm", "webassembly", "daemon", "runtime", "host"]
categories = ["wasm", "command-line-utilities", "network-programming"]

# Single binary with runtime mode detection
[[bin]]
name = "kilnd"
path = "src/main.rs"

[dependencies]
# Core Kiln dependencies (minimal internal-only dependencies)
kiln-error = { workspace = true, default-features = false }
kiln-logging = { workspace = true, default-features = false }
kiln-foundation = { workspace = true, default-features = false, optional = true }
# Centralized panic handler for safety-critical operation
kiln-panic = { workspace = true, default-features = false }

# Only add core Kiln libraries when actually needed
kiln-runtime = { workspace = true, default-features = false, optional = true }
kiln-platform = { workspace = true, default-features = false, optional = true }
kiln-host = { workspace = true, default-features = false, optional = true }
kiln-component = { workspace = true, default-features = false, optional = true }
kiln-decoder = { workspace = true, default-features = false, optional = true }
kiln-debug = { workspace = true, default-features = false, optional = true }

# WASI support
kiln-wasi = { path = "../kiln-wasi", default-features = false, optional = true }

# Global allocator for no_std mode
linked_list_allocator = { version = "0.10", optional = true }

# Tracing support for debugging
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["std", "env-filter", "fmt"] }

# No external dependencies - use internal capabilities only

[features]
default = ["std", "kiln-execution", "component-model", "wasi", "wasi-cli", "wasi-io", "wasi-clocks", "wasi-random", "wasi-filesystem"]

# Binary choice: std OR no_std (no alloc middle ground)
std = [
    "kiln-error/std",
    "kiln-logging/std",
    "dep:kiln-foundation"
]

# Enable actual Kiln execution (vs demo mode) - without kiln-component for now
kiln-execution = [
    "std",
    "dep:kiln-runtime",
    "dep:kiln-platform",
    "dep:kiln-host",
    "kiln-runtime/std",
    "kiln-platform/std",
    "kiln-host/std"
]

# Tracing support for debugging
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "kiln-foundation?/tracing",
    "kiln-runtime?/tracing"
]

# WASI support features
wasi = ["kiln-execution", "dep:kiln-wasi", "kiln-wasi/preview2", "kiln-wasi/std", "kiln-runtime/wasi", "kiln-component?/wasi"]
wasi-filesystem = ["wasi", "kiln-wasi/wasi-filesystem"]
wasi-cli = ["wasi", "kiln-wasi/wasi-cli"]
wasi-clocks = ["wasi", "kiln-wasi/wasi-clocks"]
wasi-io = ["wasi", "kiln-wasi/wasi-io"]
wasi-random = ["wasi", "kiln-wasi/wasi-random"]
wasi-nn = ["wasi", "kiln-wasi/wasi-nn"]

# Component model support
component-model = ["kiln-execution", "dep:kiln-component", "dep:kiln-decoder", "kiln-component/std", "kiln-component/kiln-execution", "kiln-decoder/std"]

# Debugger and profiler support - enables runtime debugging callbacks
debugger = ["kiln-execution", "dep:kiln-debug", "kiln-debug/runtime-traits", "kiln-runtime/debugger"]

# Safety level presets using capability-based features
# kilnd with kiln-wasi supports QM to ASIL-B (daemon/service use cases)
qm = ["kiln-foundation/dynamic-allocation", "kiln-logging/qm"]
asil-a = ["kiln-foundation/bounded-collections", "kiln-logging/asil-a"]
asil-b = ["kiln-foundation/bounded-collections", "kiln-logging/asil-b"]
# Note: ASIL-C and ASIL-D are not supported for kilnd+kiln-wasi configuration
# Use the core 'kiln' crate for ASIL-C/D applications

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]

# Panic handler for no_std builds - ASIL-B compliant (highest level for kilnd)
enable-panic-handler = ["kiln-panic/default-panic-handler", "kiln-panic/asil-b", "dep:linked_list_allocator"]

# Development panic handler (enhanced debugging)
dev-panic = ["kiln-panic/default-panic-handler", "kiln-panic/dev", "dep:linked_list_allocator"]


[lints]
workspace = true