[package]
name = "kiln-component-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[features]
default = ["std"]
std = []
no_std = []
safety-asil-b = []
safety-asil-c = ["safety-asil-b"]
safety-asil-d = ["safety-asil-c"]


[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kiln-component = { path = ".." }
kiln-format = { path = "../../kiln-format" }
kiln-foundation = { path = "../../kiln-foundation" }

[[bin]]
name = "fuzz_wit_parser"
path = "fuzz_targets/fuzz_wit_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_component_parser"
path = "fuzz_targets/fuzz_component_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_options"
path = "fuzz_targets/fuzz_canonical_options.rs"
test = false
doc = false

[[bin]]
name = "fuzz_type_bounds"
path = "fuzz_targets/fuzz_type_bounds.rs"
test = false
doc = false