[package]
name = "kiln-foundation-fuzz"
version = "0.2.0"
publish = false
edition = "2021"
authors = ["The Kiln Project Developers"]
license = "MIT"
description = "Fuzz testing for Kiln Foundation components"

[package.metadata]
cargo-fuzz = true

[workspace]
# This is a standalone fuzz testing package

[lib]
name = "kiln_foundation_fuzz"
path = "mod.rs"

[dependencies]
# Fuzzing dependencies
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Kiln dependencies
kiln-foundation = { path = "../..", features = ["std"] }
kiln-runtime = { path = "../../../kiln-runtime", features = ["std"] }

# Standard library for std-compatible tests
[features]
default = ["std"]
std = []

# Fuzz targets
safety-asil-b = []
safety-asil-c = ["safety-asil-b"]
safety-asil-d = ["safety-asil-c"]

[[bin]]
name = "fuzz_bounded_vec"
path = "fuzz_targets/fuzz_bounded_vec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bounded_stack"
path = "fuzz_targets/fuzz_bounded_stack.rs"
test = false
doc = false

[[bin]]
name = "fuzz_memory_adapter"
path = "fuzz_targets/fuzz_memory_adapter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_safe_slice"
path = "fuzz_targets/fuzz_safe_slice.rs"
test = false
doc = false