load("@rules_verus//verus:defs.bzl", "verus_library", "verus_test")

verus_library(
    name = "static_vec_proofs",
    srcs = [
        "mod.rs",
        "static_vec_proofs.rs",
    ],
    crate_root = "static_vec_proofs.rs",
    crate_name = "static_vec_proofs",
    visibility = ["//visibility:public"],
)

verus_test(
    name = "static_vec_verify",
    srcs = [
        "mod.rs",
        "static_vec_proofs.rs",
    ],
    crate_root = "static_vec_proofs.rs",
    crate_name = "static_vec_proofs",
)

verus_library(
    name = "static_queue_proofs",
    srcs = [
        "mod.rs",
        "static_queue_proofs.rs",
    ],
    crate_root = "static_queue_proofs.rs",
    crate_name = "static_queue_proofs",
    visibility = ["//visibility:public"],
)

verus_test(
    name = "static_queue_verify",
    srcs = [
        "mod.rs",
        "static_queue_proofs.rs",
    ],
    crate_root = "static_queue_proofs.rs",
    crate_name = "static_queue_proofs",
)

verus_library(
    name = "static_string_proofs",
    srcs = [
        "mod.rs",
        "static_string_proofs.rs",
    ],
    crate_root = "static_string_proofs.rs",
    crate_name = "static_string_proofs",
    visibility = ["//visibility:public"],
)

verus_test(
    name = "static_string_verify",
    srcs = [
        "mod.rs",
        "static_string_proofs.rs",
    ],
    crate_root = "static_string_proofs.rs",
    crate_name = "static_string_proofs",
)
